--- a/room_4.html
+++ b/room_4.html
@@ -32,7 +32,9 @@
           <li>Pflanzengießen</li>
           <li>Decke entstauben</li>
           <li>Boden wischen</li>
-          <!-- Weitere Listeneinträge -->
+          <li class="task-list-btn">
+            <button id="cleaned_room_button" onclick="cleaned_room()">Raum gesäubert</button>
+          </li>
         </ul>
       </div>
 
@@ -48,6 +50,25 @@
     <script src="subtitle.js"></script>
     <script src="animation.js"></script>
     <script src="calculate.js"></script>
+    <script src="handel_api_requests.js"></script>
+    <script>
+        // Disable "cleand_room" if the another person accesses the page
+        window.onload = function() {
+            if (localStorage.getItem('username') == getPersonBasedOnTimeAndRoom("room_4") && is_room_finished() !== 1) {
+            document.getElementById('cleaned_room_button').style.display = 'inline-block'
+            } else {
+                document.getElementById('cleaned_room_button').style.display = 'none'
+            }
+        };
+
+        function cleaned_room() {
+            const status = save_finished_room("room_4");
+            if (status) {
+                // Show cleand_room animation
+            }
+            window.location.href = "room_4.html"
+        }
+    </script>
 
 </body>
 </html>
