--- a/room_5.html
+++ b/room_5.html
@@ -26,15 +26,16 @@
 
     <div class="task-list-container">
         <ul class="task-list">
-          <li>Saugen zwischendurch</li>
-          <li>Tisch abwischen</li>
-          <li>Selbest Betten beziehen</li>
-          <li>Wäsche waschen (S & N)</li>
-          <li>Einkaufen (S & N)</li>
           <li>Wasserfilter reinigen (S & N)</li>
-          <li>Tonnen rausstellen (S)</li>
           <li>Fesnster putzen (6 Wochen)</li>
+          <li>Wäsche runterbringen</li>
+          <li>Wäsche waschen (S & N)</li>
           <li>Heizung putzen (1 Jahr)</li>
+          <li>Saugen zwischendurch</li>
+          <li>Tonnen rausstellen (S)</li>
+          <li>Einkaufen (S & N)</li>
+          <li>Tisch abwischen</li>
+          <li>Betten beziehen</li>
           <li class="task-list-btn">
             <button id="change_user" onclick="deleteAndRedirect()">Wechsel Nutzer</button>
           </li>
