--- a/room_0.html
+++ b/room_0.html
@@ -56,19 +56,20 @@
     <script src="confetti.js"></script>
     <script>
         // Disable "cleand_room" if the another person accesses the page
-        window.onload = function() {
-            if (localStorage.getItem('username') == getPersonBasedOnTimeAndRoom("room_0") && is_room_finished("room_0") != 1) {
-                if (is_room_finished("room_0") == undefined) {
+        window.onload = async function() {
+            var roomstatus = await is_room_finished("room_0");
+            if (localStorage.getItem('username') == getPersonBasedOnTimeAndRoom("room_0") && roomstatus !== true) {
+                if (roomstatus == undefined) {
                     document.getElementById("cleaned_room_button").innerText = "Nicht verfügbar";
                     document.getElementById("cleaned_room_button").disabled = true;
-                } // otherwise the button is visable
+                }
             } else {
                 document.getElementById('cleaned_room_button').style.display = 'none'
             }
         };
 
-        function cleaned_room() {
-            const status = save_finished_room("room_0");
+        async function cleaned_room() {
+            const status = await save_finished_room("room_0");
             if (status) {
                 document.getElementById("cleaned_room_button").disabled = true;
                 createConfetti("room_0");
